# web_printer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/database/: migrations.rs  mod.rs
src/handlers/: events.rs  mod.rs  print.rs  scan.rs  system.rs
src/models/: job_queue.rs  mod.rs  print_job.rs  scan_job.rs  scan_queue.rs
src/services/: cups.rs  escputil.rs  mod.rs  sane.rs
src/utils/: mod.rs
static/css/: components.css  main.css
static/js/: main.js  print.js  scan.js
templates/: index.html  print.html  scan.html
